# JFS

./: .gitignore  CMakeLists.txt  README.md
jfs/: JSSFSolver.cpp  JSSFSolver.h  JSSFSolver3D.cpp  JSSFSolver3D.h  JSSFSolverBase.cpp  JSSFSolverBase.h  LBMSolver.cpp  LBMSolver.h  fluid2D.cpp  fluid2D.h  fluidBase.h  grid2D.cpp  grid2D.h  gridBase.h  jfs_inline.h  jfs_typedefs.h
jfs/base/: fluid2D.cpp  fluid2D.h  fluid3D.cpp  fluid3D.h  fluidBase.h  grid2D.cpp  grid2D.h  grid3D.cpp  grid3D.h  gridBase.cpp  gridBase.h
jfs/cuda/: cuda_macros.h  lbm_cuda_kernels.cu  lbm_cuda_kernels.h  lbm_solver_cuda.cu  lbm_solver_cuda.h
jfs/cuda/grid/: cuda_grid2d.cu  cuda_grid2d.h
jfs/differential_ops/: grid_diff2d.cpp  grid_diff2d.h  grid_diff3d.cpp  grid_diff3d.h
jfs/grid/: grid2D.cpp  grid3D.cpp  grid3D.h
jfs/static_build/: jfs_inline.h
jfs/visualization/: grid_smoke2d.cpp  grid_smoke2d.h  grid_smoke3d.cpp  grid_smoke3d.h  grid_smoke_base.cpp  grid_smoke_base.h
